Fixed margins and spacing. Adapted information for ReallyGoodIdeas.

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    background: white;
+    background: black;
     font-family: 'Montserrat', sans-serif;
     box-sizing: border-box;
 }
@@ -39,6 +39,7 @@ body::-webkit-scrollbar:horizontal {
     padding-top: 20vh;
     color: white;
     text-align: center;
+    font-size: 4rem;
 }
 
 .title_h1_rest {
@@ -53,6 +54,19 @@ body::-webkit-scrollbar:horizontal {
     margin-right: auto;
     height: 5vh;
     width: auto;
+}
+
+.flexbox {
+    display: flex;
+    width: auto;
+}
+
+.vert {
+    flex-direction: column;
+}
+
+.horz {
+    flex-direction: row;
 }
 
 #nav-menu{
@@ -84,25 +98,27 @@ body::-webkit-scrollbar:horizontal {
     position: relative;
     height: 0.1vh;
     padding-top: 1.5vh;
-    font-size: 1.5rem;
+    font-size: 2rem;
     color: white;
 }
 
 h1 {
-    color: #3c3c3c;
+    color: #161616;
 }
 
 h2{
-    color: #3c3c3c;
+    color: #161616;
     text-align: center;
 }
 
 .grid-wrapper{
     display: grid;
     grid-template-columns:1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
     grid-gap: 0;
     margin-top: auto;
+    margin-bottom: auto;
+    padding-bottom: 50px;
 }
 
 #Reviews > .grid-wrapper {
@@ -121,9 +137,20 @@ h2{
     grid-template-rows: 1fr 1fr 1fr 1fr;
     grid-gap: 0;
 }
+
+.grid-wrapper5 {
+    display: grid;
+    grid-template-columns:1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+    grid-gap: 0;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+
 .grid-wrapper-Nav{
     display: grid;
-    grid-template-columns:1fr 2fr 1fr ;
+    grid-template-columns:0.5fr 2fr 1fr ;
     grid-template-rows: 1fr;
     grid-gap: 0;
     align-content: flex-start;
@@ -145,28 +172,32 @@ h2{
 
 .showcase {
     background-color: white;
-    height: 50vh;
+    height: auto;
     width: 100vw;
     overflow: hidden;
+
 }
 
 .showcase h1 {
-    color: #3c3c3c;
+    color: #161616;
 }
 
 .showcase h2{
     position: relative;
     top: 3vh;
+    font-size: 4rem;
 }
 
 .showcase h3{
     text-align: center;
-    padding-top: 1vh;
+
+    font-size: 2rem;
 }
 
 .showcase p{
     text-align: center;
     font-family: 'Roboto',sans-serif;
+    font-size: 1.5rem;
 }
 
 .item {
@@ -187,22 +218,19 @@ h2{
     height: 20vh;
     width: auto;
 }
-.team {
-    height: 70vh;
-}
-
 .card > h3 {
-    color: #3c3c3c;
+    color: #161616;
 }
 
 .card > p {
-    color: #3c3c3c;
+    color: #161616;
     font-family: 'Roboto',sans-serif;
 }
 
 .card {
     background-color: white;
     margin: 10px;
+    border-radius: 15px;
 }
 #Reviews > .card {
     margin-top: 200px;
@@ -210,6 +238,8 @@ h2{
 .zone {
     color: #FFFFFF;
     font-size: 1em;
+    animation: fadein 2s;
+    height: auto;
 }
 
 .wth_bot_borders {
@@ -219,12 +249,14 @@ h2{
 .wth_borders {
     border-style: solid;
     border-color: #dfdbd8;
+    animation: fadein 2s;
 }
 .download_PlayStore {
     display: inline-block;
     width: 35vh;
     height: auto;
     margin: auto;
+    padding-bottom: 100px;
     padding-top: 150px;
     cursor: pointer;
 }
@@ -235,6 +267,7 @@ h2{
     height: auto;
     margin: auto;
     padding-top: 150px;
+    padding-bottom: 100px;
     cursor: pointer;
 }
 
@@ -244,6 +277,7 @@ h2{
     height: auto;
     margin: auto;
     padding-top: 50px;
+    padding-bottom: 150px;
     cursor: pointer;
 }
 
@@ -257,10 +291,18 @@ footer {
 
 footer p {
     text-align: center;
-    color: #3c3c3c;
+    color: #161616;
     font-family: 'Roboto',sans-serif;
-}
 
+}
+.grid-wrapper-contact{
+    display: grid;
+    padding-left: 40vw;
+    grid-template-columns:100px 300px;
+    grid-template-rows: 1fr;
+    grid-gap: 20px;
+    padding-top: 30px;
+}
 .grid-wrapper2{
     display: grid;
     padding-left: 30vw;
@@ -274,13 +316,13 @@ footer p {
 
 
 .grid-wrapper2 p{
-    color: #3c3c3c;
+    color: #161616;
     font-family: 'Roboto',sans-serif;
     margin-top: auto;
 
 }
 .flex-contact > p {
-    color: #3c3c3c;
+    color: #161616;
     font-family: 'Roboto',sans-serif;
     margin-top: auto;
 }
@@ -295,14 +337,13 @@ footer p {
 }
 
 #premium-container{
-    display: flex;
-    flex-direction: row;
-    align-items: start;
+    text-align: center;
     margin-top: 100px;
+    font-size: 2.5rem;
 }
 #premium-container > .icon {
     margin-left: auto;
-    margin-right: 0;
+    margin-right: auto;
 }
 
 #premium-container > p {
@@ -340,12 +381,18 @@ footer p {
 }
 .grid-wrapper-price {
     display: grid;
-    grid-template-columns: 300px 300px;
-    grid-template-rows: 300px;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto;
     justify-content: center;
     margin-top: 100px;
     margin-left: auto;
     margin-right: auto;
+}
+
+h4 {
+    text-align: center;
+    font-size: 1.5rem;
+    color: #3c3c3c;
 }
 .price_card {
     display: flex;
@@ -355,7 +402,12 @@ footer p {
 }
 #hidden_plans h3 {
     font-size: 2.5rem;
-    margin-top: 75px;
+    margin-top: 25px;
+    margin-bottom: 0;
+}
+
+#hidden_plans h4 {
+    margin-top: 25px;
 }
 #hidden_plans p {
     margin-top: auto;
@@ -390,6 +442,7 @@ footer p {
     }
     .title_h1 {
         margin-top: auto;
+        font-size: 2rem;
     }
     .logo {
         margin-left: auto;
@@ -415,4 +468,17 @@ footer p {
         display: flex;
         flex-direction: column;
     }
+    .grid-wrapper5 {
+        display: flex;
+        flex-direction: column;
+    }
+    .grid-wrapper-price {
+        grid-template-columns: 300px;
+        grid-template-rows: 300px 300px;
+    }
+}
+
+@keyframes fadein {
+    0% { opacity: 0}
+    100% {opacity: 100%}
 }
